--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
   "[typescript][javascript][typescriptreact][javascriptreact][html][css][markdown][yaml][json]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "javascript.preferences.importModuleSpecifier": "relative"
-  }
+  },
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
