--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -33,6 +33,7 @@
     "@nestjs/serve-static": "^4.0.0",
     "@nestjs/swagger": "^7.1.17",
     "@nestjs/typeorm": "^10.0.1",
+    "better-sqlite3": "^9.2.2",
     "cache-manager": "^5.3.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -40,7 +41,6 @@
     "joi": "^17.11.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "sqlite3": "^5.1.7-rc.0",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
