--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -8,7 +8,8 @@
     "skipLibCheck": true,
 
     /* Bundler mode */
-    "moduleResolution": "Bundler",
+    // Setting Module Resultion to "Bundler" causes import issues with Redux Toolkit...
+    "moduleResolution": "Node",
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
