--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -9,7 +9,6 @@
     "lint": "eslint . --ext ts,tsx",
     "test": "vitest",
     "build": "tsc && vite build",
-    "codegen": "rtk-query-codegen-openapi openapi-config.ts",
     "reset": "rimraf node_modules build .test-results .coverage"
   },
   "dependencies": {
@@ -17,9 +16,13 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.3",
     "@reduxjs/toolkit": "^2.0.1",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
+    "react-router-dom": "^6.21.1",
+    "sort-by": "^1.2.0",
     "tss-react": "^4.9.3"
   },
   "devDependencies": {
