--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
-    "prettier": "^3.1.1",
+    "prettier": "^3.2.4",
     "rimraf": "^5.0.5",
     "typescript": "^5.3.3",
     "unplugin-swc": "^1.4.4",
@@ -54,7 +54,8 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,md,html,css}": [
-      "prettier --write",
+      "prettier --write packages/client/src",
+      "prettier --write packages/server/src",
       "eslint"
     ]
   },
